--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+    <h1>Day 2</h1>
     
 </body>
 </html>
